# market-news

./: .flake8  .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml
market_news_generator/: __init__.py  cache_mixin.py  enhanced_market_data.py  interfaces.py  market_data.py  market_detector.py  watch.py
market_news_generator/providers/: __init__.py  alpha_vantage_provider.py  free_news_provider.py  google_provider.py  marketwatch_provider.py  news_provider.py  newsapi_provider.py  realistic_news.py  scraping_provider.py  yahoo_provider.py
tests/: test_cache_mixin.py  test_enhanced_market_data.py  test_interfaces.py  test_market_data.py  test_realistic_news.py  test_scraping_provider.py  test_watch.py
